--- a/app/src/main/res/values-night-v31/themes.xml
+++ b/app/src/main/res/values-night-v31/themes.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <style name="Theme.PlatoCalendar" parent="android:Theme.Material.NoActionBar">
-        <item name="android:windowBackground">@color/black</item>
-        <item name="android:windowSplashScreenBackground">@color/black</item>
+        <item name="android:windowBackground">@color/dark</item>
+        <item name="android:windowSplashScreenBackground">@color/dark</item>
     </style>
 </resources>
