--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <style name="Theme.PlatoCalendar" parent="android:Theme.Material.NoActionBar">
-        <item name="android:windowBackground">@color/black</item>
+        <item name="android:windowBackground">@color/dark</item>
     </style>
 </resources>
