--- a/app/src/main/res/values-v31/themes.xml
+++ b/app/src/main/res/values-v31/themes.xml
@@ -5,4 +5,11 @@
         <item name="android:windowBackground">@color/white</item>
         <item name="android:windowSplashScreenBackground">@color/white</item>
     </style>
+
+    <style name="Theme.PlatoCalendar.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/white</item>
+        <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_plato_calendar_foreground</item>
+        <item name="postSplashScreenTheme">@style/Theme.PlatoCalendar</item>
+    </style>
+
 </resources>
