--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,4 +4,11 @@
     <style name="Theme.PlatoCalendar" parent="android:Theme.Material.Light.NoActionBar">
         <item name="android:windowBackground">@color/white</item>
     </style>
+
+    <style name="Theme.PlatoCalendar.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/white</item>
+        <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_plato_calendar_foreground</item>
+        <item name="postSplashScreenTheme">@style/Theme.PlatoCalendar</item>
+    </style>
+
 </resources>
